pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference23.pkl

import "pkl:ref"

typealias Foo1 = Foo2
typealias Foo2 = String(isEmpty)

foo: ref.Reference<ref.Domain, Foo1>
